# xmindcase

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/xmindcase/: __init__.py  cli.py  config.py  converter.py  main.py  parser.py  writer.py
templates/: testcase.template.xlsx  testcase.template.xmind
